# api/api.gen.go
@@ -119,6 +119,16 @@ const (
 	OfficialEventResponseTypeOfficial OfficialEventResponseType = "official"
 )
 
+// Defines values for PaymentAmountChangedActivityType.
+const (
+	PaymentAmountChanged PaymentAmountChangedActivityType = "payment_amount_changed"
+)
+
+// Defines values for PaymentPaidChangedActivityType.
+const (
+	PaymentPaidChanged PaymentPaidChangedActivityType = "payment_paid_changed"
+)
+
 // Defines values for PostMultipleChoiceQuestionRequestType.
 const (
 	PostMultipleChoiceQuestionRequestTypeMultiple PostMultipleChoiceQuestionRequestType = "multiple"
@@ -139,6 +149,16 @@ const (
 	PutSingleChoiceQuestionRequestTypeSingle PutSingleChoiceQuestionRequestType = "single"
 )
 
+// Defines values for QuestionCreatedActivityType.
+const (
+	QuestionCreated QuestionCreatedActivityType = "question_created"
+)
+
+// Defines values for RollCallCreatedActivityType.
+const (
+	RollCallCreated RollCallCreatedActivityType = "roll_call_created"
+)
+
 // Defines values for RollCallReactionCreatedEventType.
 const (
 	Created RollCallReactionCreatedEventType = "created"
@@ -152,6 +172,11 @@ const (
 // Defines values for RollCallReactionUpdatedEventType.
 const (
 	Updated RollCallReactionUpdatedEventType = "updated"
+)
+
+// Defines values for RoomCreatedActivityType.
+const (
+	RoomCreated RoomCreatedActivityType = "room_created"
 )
 
 // Defines values for SingleChoiceAnswerRequestType.
@@ -168,6 +193,11 @@ const (
 const (
 	Single SingleChoiceQuestionResponseType = "single"
 )
+
+// ActivityResponse defines model for ActivityResponse.
+type ActivityResponse struct {
+	union json.RawMessage
+}
 
 // AnswerRequest defines model for AnswerRequest.
 type AnswerRequest struct {
@@ -466,6 +496,28 @@ type OptionResponse struct {
 	Id      int    `json:"id"`
 }
 
+// PaymentAmountChangedActivity ユーザーが支払うべき金額が変更されたアクティビティ
+type PaymentAmountChangedActivity struct {
+	Amount int                              `json:"amount"`
+	Id     int                              `json:"id"`
+	Time   time.Time                        `json:"time"`
+	Type   PaymentAmountChangedActivityType `json:"type"`
+}
+
+// PaymentAmountChangedActivityType defines model for PaymentAmountChangedActivity.Type.
+type PaymentAmountChangedActivityType string
+
+// PaymentPaidChangedActivity 合宿係がユーザーの支払い済み金額を変更したアクティビティ
+type PaymentPaidChangedActivity struct {
+	Amount int                            `json:"amount"`
+	Id     int                            `json:"id"`
+	Time   time.Time                      `json:"time"`
+	Type   PaymentPaidChangedActivityType `json:"type"`
+}
+
+// PaymentPaidChangedActivityType defines model for PaymentPaidChangedActivity.Type.
+type PaymentPaidChangedActivityType string
+
 // PaymentRequest defines model for PaymentRequest.
 type PaymentRequest struct {
 	Amount     int    `json:"amount"`
@@ -574,6 +626,22 @@ type PutSingleChoiceQuestionRequest struct {
 // PutSingleChoiceQuestionRequestType defines model for PutSingleChoiceQuestionRequest.Type.
 type PutSingleChoiceQuestionRequestType string
 
+// QuestionCreatedActivity 質問グループが作成されたアクティビティ
+type QuestionCreatedActivity struct {
+	Due  time.Time `json:"due"`
+	Id   int       `json:"id"`
+	Name string    `json:"name"`
+
+	// NeedsResponse 必須だがまだ回答されていない質問がある場合true
+	NeedsResponse   bool                        `json:"needsResponse"`
+	QuestionGroupId int                         `json:"questionGroupId"`
+	Time            time.Time                   `json:"time"`
+	Type            QuestionCreatedActivityType `json:"type"`
+}
+
+// QuestionCreatedActivityType defines model for QuestionCreatedActivity.Type.
+type QuestionCreatedActivityType string
+
 // QuestionGroupResponse defines model for QuestionGroupResponse.
 type QuestionGroupResponse struct {
 	Description *string            `json:"description,omitempty"`
@@ -606,6 +674,20 @@ type QuestionResponseBase struct {
 	IsRequired  bool    `json:"isRequired"`
 	Title       string  `json:"title"`
 }
+
+// RollCallCreatedActivity 点呼が作成されたアクティビティ
+type RollCallCreatedActivity struct {
+	Id            int                         `json:"id"`
+	IsSubject     bool                        `json:"isSubject"`
+	Name          string                      `json:"name"`
+	NeedsResponse bool                        `json:"needsResponse"`
+	RollcallId    int                         `json:"rollcallId"`
+	Time          time.Time                   `json:"time"`
+	Type          RollCallCreatedActivityType `json:"type"`
+}
+
+// RollCallCreatedActivityType defines model for RollCallCreatedActivity.Type.
+type RollCallCreatedActivityType string
 
 // RollCallReactionCreatedEvent defines model for RollCallReactionCreatedEvent.
 type RollCallReactionCreatedEvent struct {
@@ -678,6 +760,16 @@ type RollCallResponse struct {
 	Options     []string `json:"options"`
 	Subjects    []string `json:"subjects"`
 }
+
+// RoomCreatedActivity ユーザーが所属する部屋が作成されたアクティビティ
+type RoomCreatedActivity struct {
+	Id   int                     `json:"id"`
+	Time time.Time               `json:"time"`
+	Type RoomCreatedActivityType `json:"type"`
+}
+
+// RoomCreatedActivityType defines model for RoomCreatedActivity.Type.
+type RoomCreatedActivityType string
 
 // RoomGroupRequest defines model for RoomGroupRequest.
 type RoomGroupRequest struct {
@@ -1022,6 +1114,12 @@ type PutAnswerParams struct {
 	XForwardedUser *XForwardedUser `json:"X-Forwarded-User,omitempty"`
 }
 
+// GetActivitiesParams defines parameters for GetActivities.
+type GetActivitiesParams struct {
+	// XForwardedUser ログインしているユーザーのtraQ ID（NeoShowcaseが自動で付与）
+	XForwardedUser *XForwardedUser `json:"X-Forwarded-User,omitempty"`
+}
+
 // PostEventParams defines parameters for PostEvent.
 type PostEventParams struct {
 	// XForwardedUser ログインしているユーザーのtraQ ID（NeoShowcaseが自動で付与）
@@ -1171,6 +1269,146 @@ type PutReactionJSONRequestBody = RollCallReactionRequest
 
 // PostRollCallReactionJSONRequestBody defines body for PostRollCallReaction for application/json ContentType.
 type PostRollCallReactionJSONRequestBody = RollCallReactionRequest
+
+// AsRoomCreatedActivity returns the union data inside the ActivityResponse as a RoomCreatedActivity
+func (t ActivityResponse) AsRoomCreatedActivity() (RoomCreatedActivity, error) {
+	var body RoomCreatedActivity
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromRoomCreatedActivity overwrites any union data inside the ActivityResponse as the provided RoomCreatedActivity
+func (t *ActivityResponse) FromRoomCreatedActivity(v RoomCreatedActivity) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergeRoomCreatedActivity performs a merge with any union data inside the ActivityResponse, using the provided RoomCreatedActivity
+func (t *ActivityResponse) MergeRoomCreatedActivity(v RoomCreatedActivity) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
+// AsPaymentAmountChangedActivity returns the union data inside the ActivityResponse as a PaymentAmountChangedActivity
+func (t ActivityResponse) AsPaymentAmountChangedActivity() (PaymentAmountChangedActivity, error) {
+	var body PaymentAmountChangedActivity
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromPaymentAmountChangedActivity overwrites any union data inside the ActivityResponse as the provided PaymentAmountChangedActivity
+func (t *ActivityResponse) FromPaymentAmountChangedActivity(v PaymentAmountChangedActivity) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergePaymentAmountChangedActivity performs a merge with any union data inside the ActivityResponse, using the provided PaymentAmountChangedActivity
+func (t *ActivityResponse) MergePaymentAmountChangedActivity(v PaymentAmountChangedActivity) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
+// AsPaymentPaidChangedActivity returns the union data inside the ActivityResponse as a PaymentPaidChangedActivity
+func (t ActivityResponse) AsPaymentPaidChangedActivity() (PaymentPaidChangedActivity, error) {
+	var body PaymentPaidChangedActivity
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromPaymentPaidChangedActivity overwrites any union data inside the ActivityResponse as the provided PaymentPaidChangedActivity
+func (t *ActivityResponse) FromPaymentPaidChangedActivity(v PaymentPaidChangedActivity) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergePaymentPaidChangedActivity performs a merge with any union data inside the ActivityResponse, using the provided PaymentPaidChangedActivity
+func (t *ActivityResponse) MergePaymentPaidChangedActivity(v PaymentPaidChangedActivity) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
+// AsRollCallCreatedActivity returns the union data inside the ActivityResponse as a RollCallCreatedActivity
+func (t ActivityResponse) AsRollCallCreatedActivity() (RollCallCreatedActivity, error) {
+	var body RollCallCreatedActivity
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromRollCallCreatedActivity overwrites any union data inside the ActivityResponse as the provided RollCallCreatedActivity
+func (t *ActivityResponse) FromRollCallCreatedActivity(v RollCallCreatedActivity) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergeRollCallCreatedActivity performs a merge with any union data inside the ActivityResponse, using the provided RollCallCreatedActivity
+func (t *ActivityResponse) MergeRollCallCreatedActivity(v RollCallCreatedActivity) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
+// AsQuestionCreatedActivity returns the union data inside the ActivityResponse as a QuestionCreatedActivity
+func (t ActivityResponse) AsQuestionCreatedActivity() (QuestionCreatedActivity, error) {
+	var body QuestionCreatedActivity
+	err := json.Unmarshal(t.union, &body)
+	return body, err
+}
+
+// FromQuestionCreatedActivity overwrites any union data inside the ActivityResponse as the provided QuestionCreatedActivity
+func (t *ActivityResponse) FromQuestionCreatedActivity(v QuestionCreatedActivity) error {
+	b, err := json.Marshal(v)
+	t.union = b
+	return err
+}
+
+// MergeQuestionCreatedActivity performs a merge with any union data inside the ActivityResponse, using the provided QuestionCreatedActivity
+func (t *ActivityResponse) MergeQuestionCreatedActivity(v QuestionCreatedActivity) error {
+	b, err := json.Marshal(v)
+	if err != nil {
+		return err
+	}
+
+	merged, err := runtime.JSONMerge(t.union, b)
+	t.union = merged
+	return err
+}
+
+func (t ActivityResponse) MarshalJSON() ([]byte, error) {
+	b, err := t.union.MarshalJSON()
+	return b, err
+}
+
+func (t *ActivityResponse) UnmarshalJSON(b []byte) error {
+	err := t.union.UnmarshalJSON(b)
+	return err
+}
 
 // AsFreeTextAnswerRequest returns the union data inside the AnswerRequest as a FreeTextAnswerRequest
 func (t AnswerRequest) AsFreeTextAnswerRequest() (FreeTextAnswerRequest, error) {
@@ -2104,6 +2342,9 @@ type ServerInterface interface {
 	// 合宿の一覧を取得
 	// (GET /api/camps)
 	GetCamps(ctx echo.Context) error
+	// アクティビティの一覧を取得
+	// (GET /api/camps/{campId}/activities)
+	GetActivities(ctx echo.Context, campId CampId, params GetActivitiesParams) error
 	// イベントの一覧を取得
 	// (GET /api/camps/{campId}/events)
 	GetEvents(ctx echo.Context, campId CampId) error
@@ -3311,6 +3552,42 @@ func (w *ServerInterfaceWrapper) GetCamps(ctx echo.Context) error {
 	return err
 }
 
+// GetActivities converts echo context to params.
+func (w *ServerInterfaceWrapper) GetActivities(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "campId" -------------
+	var campId CampId
+
+	err = runtime.BindStyledParameterWithOptions("simple", "campId", ctx.Param("campId"), &campId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter campId: %s", err))
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetActivitiesParams
+
+	headers := ctx.Request().Header
+	// ------------- Optional header parameter "X-Forwarded-User" -------------
+	if valueList, found := headers[http.CanonicalHeaderKey("X-Forwarded-User")]; found {
+		var XForwardedUser XForwardedUser
+		n := len(valueList)
+		if n != 1 {
+			return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Expected one value for X-Forwarded-User, got %d", n))
+		}
+
+		err = runtime.BindStyledParameterWithOptions("simple", "X-Forwarded-User", valueList[0], &XForwardedUser, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationHeader, Explode: false, Required: false})
+		if err != nil {
+			return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter X-Forwarded-User: %s", err))
+		}
+
+		params.XForwardedUser = &XForwardedUser
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetActivities(ctx, campId, params)
+	return err
+}
+
 // GetEvents converts echo context to params.
 func (w *ServerInterfaceWrapper) GetEvents(ctx echo.Context) error {
 	var err error
@@ -3965,6 +4242,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.POST(baseURL+"/api/admin/users/:userId/messages", wrapper.AdminPostMessage)
 	router.PUT(baseURL+"/api/answers/:answerId", wrapper.PutAnswer)
 	router.GET(baseURL+"/api/camps", wrapper.GetCamps)
+	router.GET(baseURL+"/api/camps/:campId/activities", wrapper.GetActivities)
 	router.GET(baseURL+"/api/camps/:campId/events", wrapper.GetEvents)
 	router.POST(baseURL+"/api/camps/:campId/events", wrapper.PostEvent)
 	router.GET(baseURL+"/api/camps/:campId/images", wrapper.GetImages)
